<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadrotor_msgs</name>
  <version>0.0.0</version>
  <description>The quadrotor_msgs package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <!-- 构建工具改为 ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 消息定义依赖 -->
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- ROS 2 消息生成工具 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- 标记这是一个接口/消息包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
