<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包名：必须与 CMakeLists.txt 中的 project() 名字一致 -->
  <name>visual_odom_bridge</name>
  <version>0.0.1</version>
  <description>Bridge node for converting ROS Odometry to PX4 VehicleOdometry (C++)</description>
  
  <!-- 请修改为你的信息 -->
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <!-- 编译工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>px4_msgs</depend>

  <!-- 测试依赖 (可选，但在创建包时通常会自动生成) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
