<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection_msgs</name>
  <version>0.0.0</version>
  <description>The object_detection_msgs package</description>

  <maintainer email="xun@todo.todo">xun</maintainer>
  <license>TODO</license>

  <!-- 1. 构建工具改为 ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 2. 消息生成依赖 -->
  <!-- 编译时需要生成器 -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- 运行时需要运行时库 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- 声明这是一个接口包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 3. 消息依赖 -->
  <!-- 使用 <depend> 标签涵盖 build_depend 和 exec_depend -->
  <depend>std_msgs</depend>

  <export>
    <!-- 指定构建类型 -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
