<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>target_ekf</name>
  <version>0.0.0</version>
  <description>The target_ekf package</description>
  <maintainer email="jlji@zju.edu.cn">ji</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>object_detection_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>libeigen-dev</depend> <!-- ROS2 中通常使用系统 Eigen -->
  <depend>tf2_eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
